--- a/demo/demo.html
+++ b/demo/demo.html
@@ -7,6 +7,7 @@
 	<meta name="description" content="your description">
 	<meta name="author" content="author,email address">
 	<meta name="robots" content="index,follow">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
 	<meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
 	<meta name="renderer" content="ie-stand">
 	<link rel="stylesheet" href="css/pageturning.css">
